Server refactor and upgrade